[package]
name = "vmouse"
description = "Virtual mouse daemon and CLI for linux"
repository = "https://github.com/ryankurte/vmouse"
authors = [ "ryan kurte <ryan@kurte.nz>" ]
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"

[package.metadata.deb]
priority = "optional"
depends = "libevdev2"
assets = [
    ["target/release/vmoused",   "/usr/local/bin/vmoused",   "0755"],
    ["target/release/vmousectl", "/usr/local/bin/vmousectl", "0755"],
    ["vmouse.toml",     "/etc/vmouse/vmouse.toml",           "0644"],
    ["99-vmouse.rules", "/etc/udev/99-vmouse.rules",         "0644"],
    ["vmouse.service", "/lib/systemd/system/vmouse.service", "0644"],
]
conf-files = [
  "/etc/vmouse/vmouse.toml",
]
maintainer-scripts = "scripts/"

[dependencies]
log = "0.4.14"
structopt = "0.3.25"
evdev-rs = { version = "0.5.0", features = ["serde"] }
simplelog = "0.10.2"
anyhow = "1.0.45"
indicatif = "0.16.2"
libc = "0.2.107"
serde = "1.0.130"
toml = "0.5.8"
ctrlc = "3.2.1"
bincode = "1.3.3"
async-std = { version = "1.10.0", features = ["attributes"] }
futures = "0.3.17"
async-ctrlc = "1.2.0"
crossbeam = "0.8.1"
smol = { version = "1.2.5", optional = false }

[[bin]]
name = "vmoused"
path = "src/daemon.rs"

[[bin]]
name = "vmousectl"
path = "src/ctl.rs"

[patch.crates-io]
evdev-rs = { git = "https://github.com/ryankurte/evdev-rs.git", branch = "device-as-raw-fd" }

